@@ -2,5 +2,6 @@
 *.egg-info
 *.pt.py
 *.html.py
+.coverage
 trace_file
 bottlecap
